apps/internal/homepage/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: svc-homepage
  labels:
    gitops: flux
