apps/internal/homepage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: svc-homepage
  labels:
    app: homepage
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      serviceAccountName: homepage
      automountServiceAccountToken: true
      securityContext:
        fsGroup: 1000
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - name: homepage-config
              mountPath: /app/config/bookmarks.yaml
              subPath: bookmarks.yaml
            - name: homepage-config
              mountPath: /app/config/custom.css
              subPath: custom.css
            - name: homepage-config
              mountPath: /app/config/custom.js
              subPath: custom.js
            - name: homepage-config
              mountPath: /app/config/docker.yaml
              subPath: docker.yaml
            - name: homepage-config
              mountPath: /app/config/kubernetes.yaml
              subPath: kubernetes.yaml
            - name: homepage-config
              mountPath: /app/config/proxmox.yaml
              subPath: proxmox.yaml
            - name: homepage-secret
              mountPath: /app/config/services.yaml
              subPath: services.yaml
            - name: homepage-secret
              mountPath: /app/config/settings.yaml
              subPath: settings.yaml
            - name: homepage-secret
              mountPath: /app/config/widgets.yaml
              subPath: widgets.yaml
          readinessProbe:
            httpGet:
              path: /api/healthcheck
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /api/healthcheck
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 6
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: homepage-config
          configMap:
            name: homepage-config
        - name: homepage-secret
          secret:
            secretName: homepage-secret
