apps/internal/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: svc-homepage
  labels:
    app: homepage
spec:
  type: ClusterIP
  selector:
    app: homepage
  ports:
    - name: http
      port: 3000
      targetPort: http
